projects/compiler/test/typechecker/accessor/error_unknown_field_chain_opt_known.abra
type Foo { bar: Bar }
type Bar { str: String }
var f: Foo?

val _ = f?.bar.str
